--- a/src/apollo/core/templates/core/login.html
+++ b/src/apollo/core/templates/core/login.html
@@ -20,30 +20,36 @@
 
   <body>
     <div class="container-fluid">
-      <div class="row-fluid">
-        <div class="span3 offset4">
-          <legend>{% trans "User Login" %}</legend>
-          <form class="form-vertical" action="" method="POST" accept-charset="utf-8">
-            {% csrf_token %}
-            {% if form.errors %}
-            <div class="alert alert-danger">{% blocktrans %}Your username and password <strong>did not match</strong>. Please try again.{% endblocktrans %}</div>
-            {% endif %}
-            <div class="control-group">
-              <div class="controls">
-                <input type="text" name="username" id="username" class="input-xlarge" placeholder="{% trans "Username" %}">
-              </div>
+      <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+          <div class="panel panel-default panel-login">
+            <div class="panel-heading panel-heading-login">{% trans "User Login" %}</div>
+            <div class="panel-body panel-login-body">
+              <form class="form-vertical" action="" method="POST" accept-charset="utf-8">
+                {% csrf_token %}
+                {% if form.errors %}
+                <div class="alert alert-danger">{% blocktrans %}Your username and password <strong>did not match</strong>. Please try again.{% endblocktrans %}</div>
+                {% endif %}
+                <div class="form-group">
+                  <div class="input-group">
+                    <span class="input-group-addon input-sm">
+                      <i class="glyphicon glyphicon-user"></i>
+                    </span>
+                    <input type="text" name="username" id="username" class="form-control" placeholder="{% trans "Username" %}">
+                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="input-group">
+                    <span class="input-group-addon input-sm">
+                      <i class="glyphicon glyphicon-lock"></i>
+                    </span>
+                    <input type="password" name="password" id="password" class="input-xlarge form-control" placeholder="{% trans "Password" %}">
+                  </div>
+                </div>
+                <button type="submit" class="btn btn-sm btn-danger">{% trans "Sign In" %}</button>
+              </form>
             </div>
-            <div class="control-group">
-              <div class="controls">
-                <input type="password" name="password" id="password" class="input-xlarge" placeholder="{% trans "Password" %}">
-              </div>
-            </div>
-            <div class="control-group">
-              <div class="controls">
-                <button type="submit" class="btn">{% trans "Sign In" %}</button>
-              </div>
-            </div>
-          </form>
+          </div>
         </div>
       </div>
     </div>
