Updated login in screen styling

--- a/src/apollo/core/templates/core/login.html
+++ b/src/apollo/core/templates/core/login.html
@@ -46,7 +46,7 @@
                     <input type="password" name="password" id="password" class="input-xlarge form-control" placeholder="{% trans "Password" %}">
                   </div>
                 </div>
-                <button type="submit" class="btn btn-sm btn-danger">{% trans "Sign In" %}</button>
+                <button type="submit" class="btn btn-sm btn-default">{% trans "Sign In" %}</button>
               </form>
             </div>
           </div>
