--- a/src/apollo/core/templates/core/activity_info.html
+++ b/src/apollo/core/templates/core/activity_info.html
@@ -1,1 +1,1 @@
-{% if activity %} · <em class="muted">{{ activity.name }}</em>{% endif %}
+{% if activity %} · <em class="text-muted">{{ activity.name }}</em>{% endif %}
