--- a/src/apollo/core/templates/core/analysis_menu.html
+++ b/src/apollo/core/templates/core/analysis_menu.html
@@ -1,20 +1,17 @@
 {% load i18n %}{% if forms %}
 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Analyses" context "adjective" %} <b class="caret"></b></a>
-    <ul class="dropdown-menu">
-        <li class="dropdown-submenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-tasks"></i> Process</a>
-           <ul class="dropdown-menu">
-                {% for form in forms %}
-                <li><a href="{% url submissions_analysis form.pk %}"><i class="icon-tasks"></i> {{ form.name }}</a></li>
-                {% endfor %}
-            </ul>
+    <ul class="dropdown-menu pull-right">
+        <li class="dropdown-header"><i class="glyphicon glyphicon-tasks"></i> Process</li>
+            {% for form in forms %}
+            <li><a href="{% url submissions_analysis form.pk %}"><i class="glyphicon glyphicon-tasks"></i> {{ form.name }}</a></li>
+            {% endfor %}
         </li>
+        <li class="divider"></li>
         {% if voting_forms %}
-        <li class="dropdown-submenu"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-list-alt"></i> {% trans "Results" context "noun" %}</a>
-            <ul class="dropdown-menu">
-                {% for form in voting_forms %}
-                <li><a href="{% url results_analysis form.pk %}"><i class="icon-list-alt"></i> {{ form.name }}</a></li>
-                {% endfor %}
-            </ul>
+        <li class="dropdown-header"><i class="glyphicon glyphicon-list-alt"></i> {% trans "Results" context "noun" %}</li>
+            {% for form in voting_forms %}
+            <li><a href="{% url results_analysis form.pk %}"><i class="glyphicon glyphicon-list-alt"></i> {{ form.name }}</a></li>
+            {% endfor %}
         </li>
         {% endif %}
     </ul>
