--- a/src/apollo/core/templates/core/dashboard.html
+++ b/src/apollo/core/templates/core/dashboard.html
@@ -19,16 +19,16 @@
 {% endblock %}
 {% block content %}
 <div class="row">
-  <div class="span12">
-      <div class="well" style="padding-bottom:0">
-          <form action="{% url dashboard %}" method="get" accept-charset="utf-8" id="filter" style="margin: 0 0 8px;">
-              <div class="controls controls-row">
+  <div class="col-md-12">
+      <div class="well well-sm">
+          <form action="{% url dashboard %}" method="get" accept-charset="utf-8" id="filter" class="form-inline">
+              <div class="form-group">
                 {% if perms.core.view_activities %}{{ filter_form.activity }}{% endif %}
                 {{ filter_form.sample }}
                 {{ filter_form.form }}
                 {{ filter_form.location }}
-                <button class="btn btn-warning" style="margin-left:1em" type="submit"><i class="icon-search icon-white"></i> {% trans "Filter" context "verb" %}</button>
-                <a class="btn form-reset" style="margin-left:0.5em">{% trans "Reset" context "verb" %}</a>
+                <button class="btn btn-warning btn-sm" style="margin-left:1em" type="submit"><i class="icon-search icon-white"></i> {% trans "Filter" context "verb" %}</button>
+                <a class="btn form-reset btn-default btn-sm" style="margin-left:0.5em">{% trans "Reset" context "verb" %}</a>
               </div>
           </form>
       </div>
@@ -36,7 +36,7 @@
 </div>
 {% for group in summary %}
 {% if forloop.counter0|divisibleby:"6" %}<div class="row">{% endif %}
-  <div class="span2">
+  <div class="col-md-2">
     <legend style="text-align:center"><a href="{% url grouped_dashboard group.id %}">{{ group.name }}</a></legend>
     <div>
       <script type="text/javascript+protovis">
@@ -92,7 +92,7 @@
 {% if forloop.last or forloop.counter|divisibleby:"6" %}</div>{% endif %}
 {% empty %}
 <div class="row">
-  <div class="span12">
+  <div class="col-md-12">
   <table width="100%" class="table table-striped table-bordered">
     <tr class="warning">
       <td style="text-align:center">{% trans "No Data Available" %}</td>
