Worked on dashboard and dashboard status breakdown template for updated framework support

--- a/src/apollo/core/templates/core/dashboard.html
+++ b/src/apollo/core/templates/core/dashboard.html
@@ -27,8 +27,8 @@
                 {{ filter_form.sample }}
                 {{ filter_form.form }}
                 {{ filter_form.location }}
-                <button class="btn btn-warning btn-sm" style="margin-left:1em" type="submit"><i class="icon-search icon-white"></i> {% trans "Filter" context "verb" %}</button>
-                <a class="btn form-reset btn-default btn-sm" style="margin-left:0.5em">{% trans "Reset" context "verb" %}</a>
+                <button class="btn btn-warning" type="submit"><i class="icon-search icon-white"></i> {% trans "Filter" context "verb" %}</button>
+                <a class="btn form-reset btn-default">{% trans "Reset" context "verb" %}</a>
               </div>
           </form>
       </div>
