--- a/src/apollo/core/static/css/custom.css
+++ b/src/apollo/core/static/css/custom.css
@@ -2,7 +2,7 @@
 .panel-heading-login {font-size: 18px;}
 .panel-login-body{padding:45px;}
 
-.divider-vertical {
+/*.divider-vertical {
 height: 35px;
 margin: 0 0px;
 border-width: 0 1px;
@@ -12,7 +12,11 @@ border-left-color: #288EE2;
 border-right-color: #64adea;
 }
 
-.navbar-nav>li>a {text-shadow: 1px 1px 2px rgba(0,0,0,0.25);}
+.navbar-nav>li>a {text-shadow: 1px 1px 2px rgba(0,0,0,0.25);}*/
+#id_sample{width: 170px;}
+#id_form{width: 170px;}
+#s2id_id_location{width:340px;}
+.select2-container .select2-choice{height: 34px; padding-top: 2.5px;}
 
 .options { display: block; margin-top: 0.5em; }
 .option { margin-right: 1em; }
