--- a/src/apollo/core/templates/core/dashboard_status_breakdown.html
+++ b/src/apollo/core/templates/core/dashboard_status_breakdown.html
@@ -27,7 +27,7 @@
                 {{ filter_form.sample }}
                 {{ filter_form.form }}
                 {{ filter_form.location }}
-                <button class="btn btn-warning" type="submit"><i class="icon-search icon-white"></i> {% trans "Filter" context "verb" %}</button>
+                <button class="btn btn-warning" type="submit"><i class="glyphicon glyphicon-search"></i> {% trans "Filter" context "verb" %}</button>
                 <a class="btn form-reset btn-default">{% trans "Reset" context "verb" %}</a>
               </div>
           </form>
