--- a/src/apollo/core/static/css/custom.css
+++ b/src/apollo/core/static/css/custom.css
@@ -13,10 +13,12 @@ border-right-color: #64adea;
 }
 
 .navbar-nav>li>a {text-shadow: 1px 1px 2px rgba(0,0,0,0.25);}*/
-#id_sample{width: 170px;}
-#id_form{width: 170px;}
+#id_sample, #id_form{width: 170px;}
 #s2id_id_location{width:340px;}
 .select2-container .select2-choice{height: 34px; padding-top: 2.5px;}
+/*.form-inline .form-group {margin-bottom: .5em;}*/
+.form-inline > * {padding:5px 5px;}
+.h3{margin-top: 0px;}
 
 .options { display: block; margin-top: 0.5em; }
 .option { margin-right: 1em; }
@@ -28,6 +30,9 @@ border-right-color: #64adea;
 .breadcrumb .locationtype { color: #DDD; }
 abbr[data-original-title] {cursor: help;border-bottom: 1px dotted #999999;}
 #id_group_26{margin-left: 0px;}
+#id_observer__observer_id, #id_group_29, #id_group_30, #id_group_31, #id_group_32, #id_group_33, #id_group_34{width: 170px;}
+
+
 /* override default img style */
 img {
   max-width: none;
