--- a/src/apollo/core/templates/core/layout.html
+++ b/src/apollo/core/templates/core/layout.html
@@ -50,7 +50,7 @@
       </div>
     </div>
     <div class="container">
-      <p class="lead">{% block title %}{{ page_title }}{% endblock %}{% activity_name request %}</p>
+      <h3 class="lead h3">{% block title %}{{ page_title }}{% endblock %}{% activity_name request %}</h3>
     </div>
     <div class="container">
       {% block content %}{% endblock %}
