Worked on Submissions List- Critical Incidents templates for updated framework support

--- a/src/apollo/core/templates/core/submission_list.html
+++ b/src/apollo/core/templates/core/submission_list.html
@@ -22,7 +22,7 @@
 </form>
 
 <div class="btn-group pull-right">
-  <a class="btn" href="javascript:document.getElementById('export_observer_submissions').submit()">{% trans "Export" context "verb" %}</a>
+  <a class="btn btn-default" href="javascript:document.getElementById('export_observer_submissions').submit()">{% trans "Export" context "verb" %}</a>
 </div>
 {% endif %}
 {% else %}
