--- a/src/apollo/core/templates/core/submission_add.html
+++ b/src/apollo/core/templates/core/submission_add.html
@@ -4,7 +4,7 @@
   <form action="" method="post">
     {% csrf_token %}
   <div class="row">
-    <div class="span12">
+    <div class="col-md-12">
       <table class="table table-bordered">
         <thead>
           <tr>
@@ -63,11 +63,11 @@
   </div>
 
   <div class="row">
-    <div class="offset8 span2">
+    <div class="col-md-offset-8 col-md-2">
       <button type="submit" class="btn btn-info btn-large btn-block">{% trans "Save" context "verb" %}</button>
     </div>
-    <div class="span2">
-      <a class="btn btn-large btn-block" href="{% url submissions_list form_pk %}">{% trans "Cancel" context "verb" %}</a>
+    <div class="col-md-2">
+      <a class="btn btn-default btn-large btn-block" href="{% url submissions_list form_pk %}">{% trans "Cancel" context "verb" %}</a>
     </div>
   </div>
   </form>
