--- a/src/apollo/core/templates/core/verification_list.html
+++ b/src/apollo/core/templates/core/verification_list.html
@@ -3,19 +3,19 @@
 {{ page_title }}
 {% if perms.core.export_submissions %}
 <div class="btn-group pull-right">
-  <form method="get"><input type="hidden" name="export" value="true" /><button class="btn" type="submit">{% trans "Export" context "verb" %}</button></form>
+  <form method="get"><input type="hidden" name="export" value="true" /><button class="btn btn-default" type="submit">{% trans "Export" context "verb" %}</button></form>
 </div>
 {% endif %}
 {% endblock %}
 {% block content %}
 <div class="row">
-  <div class="span12">
+  <div class="col-md-12">
     {% verification_filter form filter_form %}
   </div>
 </div>
 
 <div class="row">
-  <div class="span12">
+  <div class="col-md-12">
     <table class="table table-striped table-bordered table-hover">
       <thead >
         {% verification_header form perms %}
@@ -29,7 +29,7 @@
 
 {% if is_paginated %}
 <div class="row">
-  <div class="span12">
+  <div class="col-md-12">
   {% bootstrap_paginate page_obj range=10 show_first_last="true" %}
   </div>
 </div>
