--- a/src/apollo/core/templates/core/verification_edit.html
+++ b/src/apollo/core/templates/core/verification_edit.html
@@ -4,7 +4,7 @@
   <form action="" method="post" style="margin-bottom:.5em;">
     {% csrf_token %}
   <div class="row" style="margin-bottom:4em">
-    <div class="span12">
+    <div class="col-md-12">
       <table class="table table-bordered">
         <thead>
           <tr>
@@ -85,12 +85,12 @@
     </div>
   </div>
 
-  <div class="row navbar-fixed-bottom" style="bottom:0px; margin-left:1.75em; background:#fff; padding-top:1em; padding-bottom:1em;">
-    <div class="offset8 span2">
+  <div class="row navbar-fixed-bottom" style="bottom:0px; margin-right:3.9em; background:#fff; padding-top:1em; padding-bottom:1em;">
+    <div class="col-md-offset-8 col-md-2">
       <button type="submit" class="btn btn-info btn-large btn-block">{% trans "Save" context "verb" %}</button>
     </div>
-    <div class="span2">
-      <a class="btn btn-large btn-block" href="{% url verifications_list object.form.pk %}">{% trans "Cancel" context "verb" %}</a>
+    <div class="col-md-2">
+      <a class="btn btn-default btn-large btn-block" href="{% url verifications_list object.form.pk %}">{% trans "Cancel" context "verb" %}</a>
     </div>
   </div>
   </form>
