--- a/src/apollo/core/templates/core/checklist_summary.html
+++ b/src/apollo/core/templates/core/checklist_summary.html
@@ -2,21 +2,23 @@
 {% load apollo %}{% load analysis %}
 {% block content %}
 <div class="row">
-  <div class="span9">
+  <div class="col-md-9">
       {% analysis_breadcrumb_navigation form location %}
   </div>
-  <div class="span3">
-        <form class="form-horizontal pull-right" action="" method="get" accept-charset="utf-8">
-          {{ filter_form.sample }}
-          <button class="btn btn-warning" type="submit"><i class="icon-search icon-white"></i> {% trans "Filter" context "verb" %}</button>
-        </form>
+  <div class="col-md-3">
+    <form class="form-inline pull-right" action="" method="get" accept-charset="utf-8">
+      <div class="form-group form-container">{{ filter_form.sample }}</div>
+      <button class="btn btn-warning" type="submit"><i class="glyphicon glyphicon-search"></i> {% trans "Filter" context "verb" %}</button>
+    </form>
   </div>
-  <div class="span12">
+</div>
+<div class="row">
+  <div class="col-md-12">
     {% analysis_location_navigation form location %}
   </div>
 </div>
 <div class="row">
-	<div class="span12">
+	<div class="col-md-12">
 	{% if dataframe.count.any %}
 		{% for group in field_groups %}
 		<h5>{{ group }}</h5>
