--- a/src/apollo/core/templates/core/submission_filter.html
+++ b/src/apollo/core/templates/core/submission_filter.html
@@ -15,7 +15,7 @@
     </div>
     {% endif %}
     <div class="">
-      <button type="submit" class="btn btn-warning"><i class="icon-search icon-white"></i> {% trans "Search" context "verb" %}</button>
+      <button type="submit" class="btn btn-warning"><i class="glyphicon glyphicon-search"></i> {% trans "Filter" context "verb" %}</button>
       <a class="btn btn-default form-reset">{% trans "Clear" context "verb" %}</a>
     </div>
   </form>
