--- a/src/apollo/core/templates/core/submission_list.html
+++ b/src/apollo/core/templates/core/submission_list.html
@@ -67,14 +67,16 @@
 
 <div class="row">
   <div class="col-md-12">
-    <table class="table table-striped table-bordered table-hover">
-      <thead >
-        {% submission_header form perms %}
-      </thead>
-      <tbody>
-        {% submission_items submissions form perms %}
-      </tbody>
-    </table>
+    <div class="table-responsive responsive">
+      <table class="table table-striped table-bordered table-hover">
+          <thead >
+            {% submission_header form perms %}
+          </thead>
+          <tbody>
+            {% submission_items submissions form perms %}
+          </tbody>
+        </table>
+      </div>
   </div>
 </div>
 
