--- a/src/apollo/core/templates/core/verification_filter.html
+++ b/src/apollo/core/templates/core/verification_filter.html
@@ -18,7 +18,7 @@
     </div>
     
     <div class="">
-      <button type="submit" class="btn btn-warning"><i class="glyphicon glyphicon-search"></i> {% trans "Search" context "verb" %}</button>
+      <button type="submit" class="btn btn-warning"><i class="glyphicon glyphicon-search"></i> {% trans "Filter" context "verb" %}</button>
       <a class="btn btn-default form-reset">{% trans "Clear" context "verb" %}</a>
     </div>
   </form>
