--- a/src/apollo/core/templates/core/contact_list.html
+++ b/src/apollo/core/templates/core/contact_list.html
@@ -16,7 +16,7 @@
 </form>
 
 <div class="btn-group pull-right">
-  <a href="javascript:document.getElementById('export_observers').submit()" class="btn" type="submit">{% trans "Export" context "verb" %}</a>
+  <a href="javascript:document.getElementById('export_observers').submit()" class="btn btn-default" type="submit">{% trans "Export" context "verb" %}</a>
 </div>
 <div class="btn-group pull-right">
   <a style="margin-right:1em" id="send_message_modal_btn" href="#send_message" role="button" class="btn btn-success">{% trans "Send Message" %}</a>
@@ -25,21 +25,21 @@
 {% endblock %}
 {% block content %}
 <div class="row">
-  <div class="span12">
-    <div class="well" style="padding-bottom:0">
-      <form action="{% url contacts_list %}" method="get" id="filter">
-        <div class="controls controls-row">
+  <div class="col-md-12">
+    <div class="well well-sm">
+      <form action="{% url contacts_list %}" method="get" id="filter" class="form-inline">
+        <div class="form-group">
           {{ filter_form.observer_id }}
           {{ filter_form.name }}
           {{ filter_form.location }} 
           {{ filter_form.sample }}     
         </div>
-        <div class="controls controls-row">
+        <div class="form-group">
           {{ filter_form.role }}
           {{ filter_form.partner }}
           {{ filter_form.contact__connection__identity }}
-          <button type="submit" class="btn btn-warning" style="margin-left:2em"><i class="icon-search icon-white"></i> {% trans "Search" context "verb" %}</button>
-          <a class="btn form-reset" style="margin-left:0.5em">{% trans "Clear" context "verb" %}</a>
+          <button type="submit" class="btn btn-warning"><i class="glyphicon glyphicon-search"></i> {% trans "Filter" context "verb" %}</button>
+          <a class="btn btn-default form-reset">{% trans "Clear" context "verb" %}</a>
         </div> 
       </form>
     </div>
@@ -47,7 +47,7 @@
 </div>
 
 <div class="row">
-  <div class="span12">
+  <div class="col-md-12">
     <table class="table table-striped table-bordered table-hover">
       <thead>
         <tr>
@@ -79,7 +79,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="span12">
+  <div class="col-md-12">
     {% bootstrap_paginate page_obj range=10 show_first_last="true" %}
   </div>
 </div>
