--- a/src/apollo/messagelog/templates/messagelog/message_list.html
+++ b/src/apollo/messagelog/templates/messagelog/message_list.html
@@ -4,7 +4,7 @@
 {% if perms.messagelog.export_messages %}
 
 <form action="{% url messages_list %}" method="get" id="export_messages" style="display:none">
-<input type="hidden" name="export" value="true" />
+  <input type="hidden" name="export" value="true" />
 </form>
 
 <a class="btn pull-right" href="javascript:document.getElementById('export_messages').submit()">{% trans "Export" context "verb" %}</a>
@@ -12,25 +12,27 @@
 {% endblock %}
 {% block content %}
 <div class="row">
-  <div class="span12">
-    <div class="well" style="padding-bottom:0">
-      <form action="{% url messages_list %}" method="get" id="filter">
-        <div class="controls controls-row">
+  <div class="col-md-12">
+    <div class="well well-sm">
+      <form action="{% url messages_list %}" method="get" id="filter" class="form-inline">
+        <div class="form-group">
           {{ filter_form.mobile }}
           {{ filter_form.text }}
-          <div class="input-append date span2 datesel" data-date="" data-date-format="yyyy-mm-dd">
-            <input class="span2" name="created" placeholder="{% trans "Date" %}" style="width:129px" size="16" type="text" value="{{ filter_form.created.value|default_if_none:"" }}" readonly="readonly">
-            <span class="add-on"><i class="icon-calendar"></i></span>
-          </div>
-          <button type="submit" style="margin-left:1em" class="btn btn-warning"><i class="icon-search icon-white"></i> {% trans "Search" context "verb" %}</button> <a class="btn form-reset" style="margin-left:0.5em">{% trans "Clear" context "verb" %}</a>
         </div>
+        <div class=" form-group">
+          <div class="input-group date span2 datesel" data-date="" data-date-format="dd-mm-yyyy">
+            <input class="span2 form-control" name="created" placeholder="{% trans "Date" %}" style="width:129px;" size="16" type="text" value="{{ filter_form.created.value|default_if_none:"" }}" readonly="readonly">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+          </div>
+        </div>
+        <button type="submit" class="btn btn-warning"><i class="glyphicon glyphicon-search"></i> {% trans "Filter" context "verb" %}</button> <a class="btn btn-default form-reset" style="margin-left:0.5em">{% trans "Clear" context "verb" %}</a>
       </form>
     </div>
   </div>
 </div>
 
 <div class="row">
-  <div class="span12">
+  <div class="col-md-12">
     <table class="table table-striped table-bordered table-hover" style="table-layout:fixed">
       <thead >
         <tr>
@@ -62,7 +64,7 @@
 
 {% if is_paginated %}
 <div class="row">
-  <div class="span12">
+  <div class="col-md-12">
   {% bootstrap_paginate page_obj range=10 show_first_last="true" %}
   </div>
 </div>
