Made an update to message items componennts

--- a/src/apollo/messagelog/templates/messagelog/message_list.html
+++ b/src/apollo/messagelog/templates/messagelog/message_list.html
@@ -7,7 +7,7 @@
   <input type="hidden" name="export" value="true" />
 </form>
 
-<a class="btn pull-right" href="javascript:document.getElementById('export_messages').submit()">{% trans "Export" context "verb" %}</a>
+<a class="btn btn-default pull-right" href="javascript:document.getElementById('export_messages').submit()">{% trans "Export" context "verb" %}</a>
 {% endif %}
 {% endblock %}
 {% block content %}
