--- a/src/apollo/core/templates/core/contact_edit.html
+++ b/src/apollo/core/templates/core/contact_edit.html
@@ -5,20 +5,22 @@
   {% csrf_token %}
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
-      <table class="table table-striped table-bordered table-hover">
-        <tbody>
-        {% for field in form %}
-          <tr>
-            <th>{% if field.label == 'Partner' %}{% trans "Organization" %}{% else %}{{ field.label }}{% endif %}</th>
-            <td class="form-group">{{ field }}</td>
-          </tr>
-        {% endfor %}
-          <tr>
-            <td>&nbsp;</td>
-            <td><input type="submit" class="btn btn-primary" value="Save"> <a class="btn btn-default" style="margin-left:0.5em" href="{% url contacts_list %}">{% trans "Cancel" %}</a></td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="table-responsive responsive">
+        <table class="table table-striped table-bordered table-hover">
+          <tbody>
+          {% for field in form %}
+            <tr>
+              <th>{% if field.label == 'Partner' %}{% trans "Organization" %}{% else %}{{ field.label }}{% endif %}</th>
+              <td class="form-group">{{ field }}</td>
+            </tr>
+          {% endfor %}
+            <tr>
+              <td>&nbsp;</td>
+              <td><input type="submit" class="btn btn-primary" value="Save"> <a class="btn btn-default" style="margin-left:0.5em" href="{% url contacts_list %}">{% trans "Cancel" %}</a></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </form>
