--- a/src/apollo/core/templates/core/contact_list.html
+++ b/src/apollo/core/templates/core/contact_list.html
@@ -48,34 +48,36 @@
 
 <div class="row">
   <div class="col-md-12">
-    <table class="table table-striped table-bordered table-hover">
-      <thead>
-        <tr>
-          <th>{% trans "Observer ID" %}</th>{% for location_type in location_types %}
-          <th>{{ location_type.name }}</th>{% endfor %}
-          <th>{% trans "Name" context "adjective" %}</th>
-          <th>{% trans "Role" context "adjective" %}</th>
-          <th>{% trans "Phone No." context "adjective" %}</th>
-          <th>{% trans "Location" context "adjective" %}</th>
-          <th>{% trans "Organization" %}</th>
-          {% if perms.core.change_observer %}<th></th>{% endif %}
-        </tr>
-      </thead>
-      <tbody>
-        {% for contact in contacts %}
-        <tr>
-          <td>{{ contact.observer_id|default_if_none:"" }}</td>{% for location_type in location_types %}
-          <td>{% get_location_for_type contact location_type %}</td>{% endfor %}
-          <td>{{ contact.name|default_if_none:"" }}</td>
-          <td>{{ contact.role }}</td>
-          <td>{{ contact.phone|default_if_none:"" }}</td>
-          <td>{{ contact.location }}</td>
-          <td>{{ contact.partner|default_if_none:"" }}</td>
-          {% if perms.core.change_observer %}<td style="text-align:center"><a href="{% url contact_edit contact.pk %}">{% trans "Edit" context "verb" %}</a></td>{% endif %}
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
+    <div class="table-responsive responsive">
+      <table class="table table-striped table-bordered table-hover">
+          <thead>
+            <tr>
+              <th>{% trans "Observer ID" %}</th>{% for location_type in location_types %}
+              <th>{{ location_type.name }}</th>{% endfor %}
+              <th>{% trans "Name" context "adjective" %}</th>
+              <th>{% trans "Role" context "adjective" %}</th>
+              <th>{% trans "Phone No." context "adjective" %}</th>
+              <th>{% trans "Location" context "adjective" %}</th>
+              <th>{% trans "Organization" %}</th>
+              {% if perms.core.change_observer %}<th></th>{% endif %}
+            </tr>
+          </thead>
+          <tbody>
+            {% for contact in contacts %}
+            <tr>
+              <td>{{ contact.observer_id|default_if_none:"" }}</td>{% for location_type in location_types %}
+              <td>{% get_location_for_type contact location_type %}</td>{% endfor %}
+              <td>{{ contact.name|default_if_none:"" }}</td>
+              <td>{{ contact.role }}</td>
+              <td>{{ contact.phone|default_if_none:"" }}</td>
+              <td>{{ contact.location }}</td>
+              <td>{{ contact.partner|default_if_none:"" }}</td>
+              {% if perms.core.change_observer %}<td style="text-align:center"><a href="{% url contact_edit contact.pk %}">{% trans "Edit" context "verb" %}</a></td>{% endif %}
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
   </div>
 </div>
 <div class="row">
