--- a/src/apollo/core/templates/core/layout.html
+++ b/src/apollo/core/templates/core/layout.html
@@ -40,9 +40,11 @@
             {% if perms.messagelog.view_messages %}<li><a href="{% url messages_list %}"><i class="glyphicon glyphicon-envelope"></i> {% trans "Messages" %}</a></li>{% endif %}
             <li class="divider-vertical"></li>
             <li>
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-user glyphicon-white"></i> {{ request.user.username }} <b class="caret"></b></a>
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-user"></i> {{ request.user.username }} <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="{% url user-logout %}">{% trans "Logout" %}</a></li>
+                <li><a href="{% url activity_selection %}"><i class="glyphicon glyphicon-th-list"></i> {% trans "Activity Menu" %}</a></li>
+                <li class="divider"></li>
+                <li><a href="{% url user-logout %}"><i class="glyphicon glyphicon-log-out"></i> {% trans "Logout" %}</a></li>
               </ul>
             </li>
           </ul>
