--- a/src/apollo/core/templates/core/verification_edit.html
+++ b/src/apollo/core/templates/core/verification_edit.html
@@ -85,7 +85,7 @@
     </div>
   </div>
 
-  <div class="row navbar-fixed-bottom" style="bottom:0px; margin-right:3.9em; background:#fff; padding-top:1em; padding-bottom:1em;">
+  <div class="row navbar-fixed-bottom" style="bottom:0px; padding-right:5em; background:#fff; padding-top:1em; padding-bottom:1em;">
     <div class="col-md-offset-8 col-md-2">
       <button type="submit" class="btn btn-info btn-large btn-block">{% trans "Save" context "verb" %}</button>
     </div>
