--- a/src/apollo/core/templates/core/analysis_menu.html
+++ b/src/apollo/core/templates/core/analysis_menu.html
@@ -1,16 +1,16 @@
 {% load i18n %}{% if forms %}
-<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Analyses" context "adjective" %} <b class="caret"></b></a>
+<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-stats"></i> {% trans "Analyses" context "adjective" %} <b class="caret"></b></a>
     <ul class="dropdown-menu pull-right">
-        <li class="dropdown-header"><i class="glyphicon glyphicon-tasks"></i> Process</li>
+        <li class="dropdown-header">Process</li>
             {% for form in forms %}
-            <li><a href="{% url submissions_analysis form.pk %}"><i class="glyphicon glyphicon-tasks"></i> {{ form.name }}</a></li>
+            <li><a href="{% url submissions_analysis form.pk %}"><i class="glyphicon glyphicon-stats"></i> {{ form.name }}</a></li>
             {% endfor %}
         </li>
         <li class="divider"></li>
         {% if voting_forms %}
-        <li class="dropdown-header"><i class="glyphicon glyphicon-list-alt"></i> {% trans "Results" context "noun" %}</li>
+        <li class="dropdown-header">{% trans "Results" context "noun" %}</li>
             {% for form in voting_forms %}
-            <li><a href="{% url results_analysis form.pk %}"><i class="glyphicon glyphicon-list-alt"></i> {{ form.name }}</a></li>
+            <li><a href="{% url results_analysis form.pk %}"><i class="glyphicon glyphicon-stats"></i> {{ form.name }}</a></li>
             {% endfor %}
         </li>
         {% endif %}
