--- a/apollo/accounts/templates/accounts/login_user.html
+++ b/apollo/accounts/templates/accounts/login_user.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{{ _("User Login") }}</title>
+    <title>{% trans %}User Login{% endtrans %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -22,16 +22,18 @@
       <div class="row">
         <div class="col-md-4 col-md-offset-4">
           <div class="panel panel-default panel-login">
-              <div class="panel-heading panel-heading-login">{{ _("User Login") }}</div>
+            <div class="panel-heading panel-heading-login">{% trans %}User Login{% endtrans %}</div>
             <div class="panel-body panel-login-body">
-              <form class="form-vertical" action="" method="POST" accept-charset="utf-8">
-                <div class="alert alert-danger">{{ _("Your username and password <strong>did not match</strong>. Please try again.") }}</div>
+              <form name="login_user_form" class="form-vertical" action="{{ url_for_security('login') }}" method="POST" accept-charset="utf-8">{{ login_user_form.hidden_tag() }}
+                {% if login_user_form.errors %}
+                <div class="alert alert-danger">{% trans %}Your username and password <strong>did not match</strong>. Please try again.{% endtrans %}</div>
+                {% endif %}
                 <div class="form-group">
                   <div class="input-group">
                     <span class="input-group-addon input-sm">
                       <i class="glyphicon glyphicon-user"></i>
                     </span>
-                    <input type="text" name="username" id="username" class="form-control" placeholder="{{ _("Username") }}">
+                    <input type="text" name="{{ login_user_form.email.name }}" id="{{ login_user_form.email.id }}" class="form-control" placeholder="{% trans %}Email{% endtrans %}">
                   </div>
                 </div>
                 <div class="form-group">
@@ -39,10 +41,11 @@
                     <span class="input-group-addon input-sm">
                       <i class="glyphicon glyphicon-lock"></i>
                     </span>
-                    <input type="password" name="password" id="password" class="input-xlarge form-control" placeholder="{{ _("Password") }}">
+                    <input type="password" name="{{ login_user_form.password.name }}" id="{{ login_user_form.password.id }}" class="input-xlarge form-control" placeholder="{% trans %}Password{% endtrans %}">
                   </div>
                 </div>
-                <button type="submit" class="btn btn-sm btn-default">{{ _("Sign In") }}</button>
+                <input type="hidden" name="{{ login_user_form.next.name }}" id="{{ login_user_form.next.id }}" value="{{ login_user_form.next.value }}">
+                <button type="submit" class="btn btn-sm btn-default">{% trans %}Sign In{% endtrans %}</button>
               </form>
             </div>
           </div>
