--- a/apollo/core/templates/403.html
+++ b/apollo/core/templates/403.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Forbidden Error</title>
+    <title>{% trans %}Forbidden Error{% endtrans %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% assets 'apollo_css' %}
     <link rel="stylesheet" href="{{ ASSET_URL }}" type="text/css" media="screen,projection" charset="utf-8">
@@ -11,8 +11,8 @@
  <body>
     <div class="row-fluid">
 		<div class="span4 offset4" style="text-align:center; margin-top:14em;">
-			<legend style="border-bottom:0px; margin-bottom:0px;">Off Limits!</legend>
-			<p>We understood your request, but we refuse to honor it! You are seeing this page because you were snooping around! Now paddle along before the buzzer goes off!</p>
+			<legend style="border-bottom:0px; margin-bottom:0px;">{% trans %}Off Limits!{% endtrans %}</legend>
+			<p>{% trans %}We understood your request, but we refuse to honor it! You are seeing this page because you were snooping around! Now paddle along before the buzzer goes off!{% endtrans %}</p>
 		</div>
 	</div>
   </body>
