--- a/apollo/core/templates/404.html
+++ b/apollo/core/templates/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Page not found</title>
+    <title>{% trans %}Page not found{% endtrans %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% assets 'apollo_css' %}
     <link rel="stylesheet" href="{{ ASSET_URL }}" type="text/css" media="screen,projection" charset="utf-8">
@@ -11,8 +11,8 @@
  <body>
     <div class="row-fluid">
 		<div class="span4 offset4" style="text-align:center; margin-top:14em;">
-			<legend style="border-bottom:0px; margin-bottom:0px;">Oh No! Looks like you're lost!</legend>
-			<p>Don't freak out, maybe you entered the wrong address or clicked a bad link! Who knows, this could even be a fluke! :) I recommend you either verify the address or click the back arrow (&larr;) at the top left corner of the page, and cross-check the action you were trying to perform!</p>
+			<legend style="border-bottom:0px; margin-bottom:0px;">{% trans %}Oh No! Looks like you're lost!{% endtrans %}</legend>
+			<p>{% trans %}Don't freak out, maybe you entered the wrong address or clicked a bad link! Who knows, this could even be a fluke! :) I recommend you either verify the address or click the back arrow (&larr;) at the top left corner of the page, and cross-check the action you were trying to perform!{% endtrans %}</p>
 		</div>
 	</div>
   </body>
